# maya_tutorials

./: README.md
Tutorial1-Visual_Studio-Hello_World_Example/: Readme.md  Visual_Studio-Hello_World_Example.vcxproj
Tutorial2-CMake-Hello_World_Example/: CMakeLists.txt
Tutorial2-CMake-Hello_World_Example/dev/: FindMaya.cmake
Tutorial2-CMake-Hello_World_Example/src/: CMakeLists.txt
Visual_Studio-Hello_World_Example/: HelloWorld.cpp  Visual_Studio-Hello_World_Example.sln
